--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "jspdf": "^1.4.1",
     "lodash": "^4.17.10",
     "morgan": "^1.9.0",
     "object-assign": "4.1.1",
+    "pdfkit": "^0.8.3",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
@@ -42,6 +44,7 @@
     "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-pdfkit": "^0.1.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-table": "^6.8.2",
