--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-table": "^6.8.2",
+    "react-tooltip": "^3.6.1",
     "redux": "^4.0.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
