--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "20.0.4",
     "jspdf": "^1.4.1",
     "lodash": "^4.17.10",
+    "moment": "^2.22.2",
     "morgan": "^1.9.0",
     "object-assign": "4.1.1",
     "pdfkit": "^0.8.3",
@@ -42,6 +43,7 @@
     "prop-types": "^15.6.1",
     "raf": "3.4.0",
     "react": "^16.3.2",
+    "react-datepicker": "^1.5.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
     "react-pdfkit": "^0.1.0",
